--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kolibreath.shconnection">
 
+  <uses-permission android:name="android.permission.INTERNET"/>
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
@@ -9,7 +10,13 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".MainActivity">
+    <activity android:name=".ui.main.MainActivity"/>
+
+    <activity android:name=".base.ui.ToolbarActivity"/>
+    <activity android:name=".base.ui.BaseActivity"/>
+    <!--auth-->
+    <activity android:name=".ui.auth.RegisterActivity"/>
+    <activity android:name=".ui.auth.LoginActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -17,11 +24,7 @@
       </intent-filter>
     </activity>
 
-    <activity android:name=".ToolbarActivity"/>
-    <activity android:name=".BaseActivity"/>
-    <!--auth-->
-    <activity android:name=".ui.auth.RegisterActivity"/>
-    <activity android:name=".ui.auth.LoginActivity"/>
-  </application>
+    <activity android:name=".ui.auth.ScanActivity"/>
+b  </application>
 
 </manifest>
