--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,6 @@ dependencies {
   implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
   implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
   implementation 'com.android.support:design:28.0.0-rc01'
-
   implementation 'cn.yipianfengye.android:zxing-library:2.2'
+  implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.5'
 }
