--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+  packagingOptions {
+    exclude 'META-INF/rxjava.properties'
+  }
+
 }
 
 dependencies {
@@ -47,4 +52,6 @@ dependencies {
   implementation 'cn.yipianfengye.android:zxing-library:2.2'
   implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.5'
   implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+  implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.1'
+  implementation 'com.squareup.picasso:picasso:2.5.2'
 }
