--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,12 @@
 buildscript {
   ext.kotlin_version = '1.2.51'
 
-    repositories {
+
+
+  repositories {
         google()
         jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
@@ -17,9 +20,13 @@ buildscript {
 }
 
 allprojects {
-    repositories {
+
+  repositories {
         google()
         jcenter()
+        maven{
+          url 'https://jitpack.io'
+       }
     }
 }
 
