--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -52,6 +53,6 @@ dependencies {
   implementation 'cn.yipianfengye.android:zxing-library:2.2'
   implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.5'
   implementation 'com.rengwuxian.materialedittext:library:2.1.4'
-  implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.1'
-  implementation 'com.squareup.picasso:picasso:2.5.2'
+  implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
+  implementation 'com.android.support:multidex:1.0.3'
 }
