--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="com.example.kolibreath.shconnection">
 
   <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.CAMERA" />
+
   <application
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
@@ -17,14 +21,32 @@
     <!--auth-->
     <activity android:name=".ui.auth.RegisterActivity"/>
     <activity android:name=".ui.auth.LoginActivity">
+    </activity>
+
+    <activity android:name=".ui.auth.ScanActivity"/>
+
+    <activity android:name=".ui.main.news.ViewPictureActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <activity android:name=".ui.main.news.PlusImageActivity">
+    </activity>
 
-    <activity android:name=".ui.auth.ScanActivity"/>
-b  </application>
+
+    <!--解决7.0照相机崩溃问题-->
+    <provider
+        android:name="android.support.v4.content.FileProvider"
+        android:authorities="${applicationId}.provider"
+        android:exported="false"
+        android:grantUriPermissions="true">
+      <meta-data
+          android:name="android.support.FILE_PROVIDER_PATHS"
+          android:resource="@xml/file_paths" />
+    </provider>
+  </application>
+
 
 </manifest>
