--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
   implementation 'com.android.support:design:28.0.0-rc01'
   implementation 'cn.yipianfengye.android:zxing-library:2.2'
   implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.5'
+//qiniu
+  implementation 'com.qiniu:qiniu-android-sdk:7.3.+'
+
 }
