--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
   //qiniu
   implementation 'com.qiniu:qiniu-android-sdk:7.3.+'
   implementation 'de.hdodenhof:circleimageview:2.2.0'
-
+  // https://mvnrepository.com/artifact/org.apache.poi/poi
+  implementation 'org.apache.poi:poi:4.0.0'
 }
