--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,10 @@ dependencies {
   implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
   implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
   implementation 'io.reactivex:rxandroid:1.2.1'
-  implementation 'com.android.support:cardview-v7:28.0.0-rc01'
-  implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
+  implementation 'com.android.support:cardview-v7:28.0.0'
+  implementation 'com.android.support:recyclerview-v7:28.0.0'
   implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
-  implementation 'com.android.support:design:28.0.0-rc01'
+  implementation 'com.android.support:design:28.0.0'
   implementation 'cn.yipianfengye.android:zxing-library:2.2'
   implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.5'
   implementation 'com.rengwuxian.materialedittext:library:2.1.4'
