--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
     </activity>
     <activity android:name=".ui.main.navigation.LoginActivity"/>
     <activity android:name=".ui.main.navigation.NavigationActivity"/>
+    <activity android:name=".ui.main.TeacherCreateClassActivity"/>
     <!--解决7.0照相机崩溃问题-->
     <provider
         android:name="android.support.v4.content.FileProvider"
