--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,17 +50,18 @@ dependencies {
   implementation 'com.android.support:recyclerview-v7:28.0.0'
   implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
   implementation 'com.android.support:design:28.0.0'
+  //二维码扫描 二维码生成
   implementation 'cn.yipianfengye.android:zxing-library:2.2'
+
   implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.5'
-  implementation 'com.rengwuxian.materialedittext:library:2.1.4'
   implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
+
   implementation 'com.android.support:multidex:1.0.3'
+
   //qiniu
   implementation 'com.qiniu:qiniu-android-sdk:7.3.+'
   implementation 'de.hdodenhof:circleimageview:2.2.0'
-  // https://mvnrepository.com/artifact/org.apache.poi/poi
 
-  //dependencies to make apache poi to get up and fuck
-//  implementation 'com.fasterxml:aalto-xml:1.0.0'
+
 
 }
