--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,16 +52,11 @@ dependencies {
   implementation 'com.android.support:design:28.0.0'
   //二维码扫描 二维码生成
   implementation 'cn.yipianfengye.android:zxing-library:2.2'
-
   implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.5'
   implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
-
   implementation 'com.android.support:multidex:1.0.3'
-
   //qiniu
   implementation 'com.qiniu:qiniu-android-sdk:7.3.+'
   implementation 'de.hdodenhof:circleimageview:2.2.0'
-
-
-
+  implementation 'com.squareup.picasso:picasso:2.71828'
 }
