--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
   implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
   implementation 'com.android.support.constraint:constraint-layout:1.1.2'
   testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   // Anko Commons
@@ -47,7 +48,8 @@ dependencies {
   implementation 'cn.yipianfengye.android:zxing-library:2.2'
   implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.5'
   implementation 'de.hdodenhof:circleimageview:2.2.0'
+
 //qiniu
-  implementation 'com.qiniu:qiniu-android-sdk:7.3.+'
+//  implementation 'com.qiniu:qiniu-android-sdk:7.3.+'
 
 }
