--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,9 @@ dependencies {
   implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.5'
   implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
   implementation 'com.android.support:multidex:1.0.3'
-  //qiniu
-  implementation 'com.qiniu:qiniu-android-sdk:7.3.+'
+
+    //腾讯云
+  implementation 'com.tencent.qcloud:cosxml:5.4.19'
   implementation 'de.hdodenhof:circleimageview:2.2.0'
   implementation 'com.squareup.picasso:picasso:2.71828'
 }
