--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
   repositories {
         google()
         jcenter()
+      maven {
+          url "https://dl.bintray.com/tencentqcloudterminal/maven"
+      }
 
     }
     dependencies {
